# Bchaves

./: CMakeLists.txt  CMakePresets.json  FOUND.txt  Makefile  README.md  address_bit1.ckp  address_default.ckp  bsgs_bit1.ckp  implementar.txt  kangaroo_default.ckp  migrar.txt  
core/: address.cpp  address.hpp  base58.cpp  base58.hpp  cuckoo.hpp  hash.cpp  hash.hpp  ripemd160.hpp  secp256k1.cpp  secp256k1.hpp
doc/: README.md  algorithms.md  architecture.md  usage.md
docs/: migrar-analise.md
engine/: address.cpp  app.cpp  app.hpp  bsgs.cpp  kangaroo.cpp
modulos/: address.cpp  bsgs.cpp  kangaroo.cpp
scripts/: build_wsl.sh  test_wsl.sh
src/: address_main.cpp  bsgs_main.cpp  kangaroo_main.cpp
src/core/: address.cpp  address.hpp  base58.cpp  base58.hpp  hash.hpp  ripemd160.hpp  secp256k1.cpp  secp256k1.hpp
src/engine/: app.cpp  app.hpp
src/system/: checkpoint.cpp  checkpoint.hpp  cli.cpp  cli.hpp  format.cpp  format.hpp  hardware.cpp  hardware.hpp  targets.cpp  targets.hpp  types.hpp
system/: checkpoint.cpp  checkpoint.hpp  cli.cpp  cli.hpp  format.cpp  format.hpp  hardware.cpp  hardware.hpp  io.cpp  io.hpp  targets.cpp  targets.hpp  types.hpp
tests/: test_main.cpp
